--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
   deploy-hmg:
     runs-on: ubuntu-latest
     environment:
-      name: dev
+      name: hmg
       url: https://www.google.com.br
     needs: deploy-dev
     steps:
@@ -32,7 +32,7 @@ jobs:
   deploy-prd:
     runs-on: ubuntu-latest
     environment:
-      name: dev
+      name: prd
       url: https://www.google.com.br
     needs: deploy-hmg
     steps:
